--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -30,7 +30,7 @@
             android:padding="20dp">
 
             <TextView
-                android:text="About Author"
+                android:text="About"
                 android:textSize="30sp"
                 android:textColor="@color/text_dark"
                 android:layout_width="match_parent"
@@ -39,11 +39,11 @@
                 android:gravity="center"/>
 
             <ImageView
-                android:layout_width="295dp"
-                android:layout_height="282dp"
+                android:layout_width="241dp"
+                android:layout_height="158dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:src="@drawable/farah_pic" />
+                android:src="@drawable/calc_pic" />
 
             <TextView
                 android:text="Author: Farah Liyana Binti Nizamuddin"
